Rename the XPC identifier to use the outer bundle

This is essentially a manual revert of
https://codereview.chromium.org/2727003002 to provide XPC
servers from different channels with a unique name.

BUG=720776

Review-Url: https://codereview.chromium.org/2884693002
Cr-Commit-Position: refs/heads/master@{#473538}

Former-commit-id: 44554d6a63cde5ea96c5d315176d7cf45222e1d6