chrome/browser/ui/cocoa/notifications/notification_constants_mac.mm
@@ -20,6 +20,6 @@ NSString* const kNotificationOperation = @"notificationOperation";
 NSString* const kNotificationButtonIndex = @"notificationButtonIndex";
 
 // Name of the XPC service
-NSString* const kAlertXPCServiceName = @"%@.AlertNotificationService";
+NSString* const kAlertXPCServiceName = @"%@.framework.AlertNotificationService";
 
 }  // notification_constants
